// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`asymmetric matcher error 1`] = `
{
  "actual": "hello",
  "diff": undefined,
  "expected": "StringContaining "xx"",
  "message": "expected 'hello' to deeply equal StringContaining "xx"",
}
`;

exports[`asymmetric matcher error 2`] = `
{
  "actual": "hello",
  "diff": undefined,
  "expected": "StringNotContaining "ll"",
  "message": "expected 'hello' to deeply equal StringNotContaining "ll"",
}
`;

exports[`asymmetric matcher error 3`] = `
{
  "actual": "Object {
  "foo": "hello",
}",
  "diff": "- Expected
+ Received

  Object {
-   "foo": StringContaining "xx",
+   "foo": "hello",
  }",
  "expected": "Object {
  "foo": StringContaining "xx",
}",
  "message": "expected { foo: 'hello' } to deeply equal { foo: StringContaining "xx" }",
}
`;

exports[`asymmetric matcher error 4`] = `
{
  "actual": "Object {
  "foo": "hello",
}",
  "diff": "- Expected
+ Received

  Object {
-   "foo": StringNotContaining "ll",
+   "foo": "hello",
  }",
  "expected": "Object {
  "foo": StringNotContaining "ll",
}",
  "message": "expected { foo: 'hello' } to deeply equal { foo: StringNotContaining "ll" }",
}
`;

exports[`asymmetric matcher error 5`] = `
{
  "actual": "hello",
  "diff": "- Expected: 
stringContainingCustom<xx>

+ Received: 
"hello"",
  "expected": "stringContainingCustom<xx>",
  "message": "expected 'hello' to deeply equal stringContainingCustom<xx>",
}
`;

exports[`asymmetric matcher error 6`] = `
{
  "actual": "hello",
  "diff": "- Expected: 
not.stringContainingCustom<ll>

+ Received: 
"hello"",
  "expected": "not.stringContainingCustom<ll>",
  "message": "expected 'hello' to deeply equal not.stringContainingCustom<ll>",
}
`;

exports[`asymmetric matcher error 7`] = `
{
  "actual": "Object {
  "foo": "hello",
}",
  "diff": "- Expected
+ Received

  Object {
-   "foo": stringContainingCustom<xx>,
+   "foo": "hello",
  }",
  "expected": "Object {
  "foo": stringContainingCustom<xx>,
}",
  "message": "expected { foo: 'hello' } to deeply equal { foo: stringContainingCustom<xx> }",
}
`;

exports[`asymmetric matcher error 8`] = `
{
  "actual": "Object {
  "foo": "hello",
}",
  "diff": "- Expected
+ Received

  Object {
-   "foo": not.stringContainingCustom<ll>,
+   "foo": "hello",
  }",
  "expected": "Object {
  "foo": not.stringContainingCustom<ll>,
}",
  "message": "expected { foo: 'hello' } to deeply equal { foo: not.stringContainingCustom<ll> }",
}
`;

exports[`asymmetric matcher error 9`] = `
{
  "actual": "undefined",
  "diff": undefined,
  "expected": "undefined",
  "message": "expected "hello" to contain "xx"",
}
`;

exports[`asymmetric matcher error 10`] = `
{
  "actual": "undefined",
  "diff": undefined,
  "expected": "undefined",
  "message": "expected "hello" not to contain "ll"",
}
`;

exports[`asymmetric matcher error 11`] = `
{
  "actual": "hello",
  "diff": "- Expected: 
testComplexMatcher<[object Object]>

+ Received: 
"hello"",
  "expected": "testComplexMatcher<[object Object]>",
  "message": "expected 'hello' to deeply equal testComplexMatcher<[object Object]>",
}
`;

exports[`asymmetric matcher error 12`] = `
{
  "actual": "Object {
  "k": "v",
  "k2": "v2",
}",
  "diff": "- Expected
+ Received

- ObjectContaining {
+ Object {
    "k": "v",
-   "k3": "v3",
+   "k2": "v2",
  }",
  "expected": "ObjectContaining {
  "k": "v",
  "k3": "v3",
}",
  "message": "expected { k: 'v', k2: 'v2' } to deeply equal ObjectContaining {"k": "v", "k3": "v3"}",
}
`;

exports[`asymmetric matcher error 13`] = `
{
  "actual": "Array [
  "a",
  "b",
]",
  "diff": "- Expected
+ Received

- ArrayContaining [
+ Array [
    "a",
-   "c",
+   "b",
  ]",
  "expected": "ArrayContaining [
  "a",
  "c",
]",
  "message": "expected [ 'a', 'b' ] to deeply equal ArrayContaining ["a", "c"]",
}
`;

exports[`asymmetric matcher error 14`] = `
{
  "actual": "hello",
  "diff": undefined,
  "expected": "StringMatching /xx/",
  "message": "expected 'hello' to deeply equal StringMatching /xx/",
}
`;

exports[`asymmetric matcher error 15`] = `
{
  "actual": "2.5",
  "diff": "- Expected
+ Received

- NumberCloseTo 2 (1 digit)
+ 2.5",
  "expected": "NumberCloseTo 2 (1 digit)",
  "message": "expected 2.5 to deeply equal NumberCloseTo 2 (1 digit)",
}
`;

exports[`asymmetric matcher error 16`] = `
{
  "actual": "hello",
  "diff": undefined,
  "expected": "StringContaining "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"",
  "message": "expected 'hello' to deeply equal StringContaining{…}",
}
`;

exports[`asymmetric matcher error 17`] = `
{
  "actual": "hello",
  "diff": undefined,
  "expected": "StringContaining "xx"",
  "message": "expected error to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 18`] = `
{
  "actual": "hello",
  "diff": "- Expected: 
stringContainingCustom<xx>

+ Received: 
"hello"",
  "expected": "stringContainingCustom<xx>",
  "message": "expected error to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 19`] = `
{
  "actual": "hello",
  "diff": undefined,
  "expected": "StringContaining "ll"",
  "message": "expected error not to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 20`] = `
{
  "actual": "hello",
  "diff": "- Expected: 
stringContainingCustom<ll>

+ Received: 
"hello"",
  "expected": "stringContainingCustom<ll>",
  "message": "expected error not to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 21`] = `
{
  "actual": "[Error: hello]",
  "diff": "- Expected: 
StringContaining "ll"

+ Received: 
[Error: hello]",
  "expected": "StringContaining "ll"",
  "message": "expected error to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 22`] = `
{
  "actual": "[Error: hello]",
  "diff": "- Expected: 
stringContainingCustom<ll>

+ Received: 
[Error: hello]",
  "expected": "stringContainingCustom<ll>",
  "message": "expected error to match asymmetric matcher",
}
`;

exports[`asymmetric matcher error 23`] = `
{
  "actual": "[Error: hello]",
  "diff": "- Expected: 
[Function MyError1]

+ Received: 
[Error: hello]",
  "expected": "[Function MyError1]",
  "message": "expected error to be instance of MyError1",
}
`;

exports[`diff 1`] = `
{
  "actual": "undefined",
  "diff": "- Expected: 
true

+ Received: 
undefined",
  "expected": "true",
  "message": "expected undefined to be truthy",
}
`;

exports[`diff 2`] = `
{
  "actual": "Object {
  "hello": "world",
}",
  "diff": "- Expected: 
false

+ Received: 
Object {
  "hello": "world",
}",
  "expected": "false",
  "message": "expected { hello: 'world' } to be falsy",
}
`;

exports[`diff 3`] = `
{
  "actual": "Object {
  "hello": "world",
}",
  "diff": "- Expected: 
NaN

+ Received: 
Object {
  "hello": "world",
}",
  "expected": "NaN",
  "message": "expected { hello: 'world' } to be NaN",
}
`;

exports[`diff 4`] = `
{
  "actual": "Object {
  "hello": "world",
}",
  "diff": "- Expected: 
undefined

+ Received: 
Object {
  "hello": "world",
}",
  "expected": "undefined",
  "message": "expected { hello: 'world' } to be undefined",
}
`;

exports[`diff 5`] = `
{
  "actual": "Object {
  "hello": "world",
}",
  "diff": "- Expected: 
null

+ Received: 
Object {
  "hello": "world",
}",
  "expected": "null",
  "message": "expected { hello: 'world' } to be null",
}
`;

exports[`toHaveBeenNthCalledWith error 1`] = `
{
  "actual": "Array [
  "Hi",
]",
  "diff": "- Expected
+ Received

  Array [
-   "hey",
+   "Hi",
  ]",
  "expected": "Array [
  "hey",
]",
  "message": "expected 2nd "spy" call to have been called with [ 'hey' ]",
}
`;

exports[`toHaveBeenNthCalledWith error 2`] = `
{
  "actual": "undefined",
  "diff": undefined,
  "expected": "Array [
  "hey",
]",
  "message": "expected 3rd "spy" call to have been called with [ 'hey' ], but called only 2 times",
}
`;

exports[`toMatch/toContain diff 1`] = `
{
  "actual": "hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello",
  "diff": "Expected: "world"
Received: "hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello"",
  "expected": "world",
  "message": "expected 'hellohellohellohellohellohellohellohe…' to contain 'world'",
}
`;

exports[`toMatch/toContain diff 2`] = `
{
  "actual": "hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello",
  "diff": "Expected: "world"
Received: "hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello"",
  "expected": "world",
  "message": "expected 'hellohellohellohellohellohellohellohe…' to match 'world'",
}
`;

exports[`toMatch/toContain diff 3`] = `
{
  "actual": "hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello",
  "diff": "- Expected: 
/world/

+ Received: 
"hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello"",
  "expected": "/world/",
  "message": "expected 'hellohellohellohellohellohellohellohe…' to match /world/",
}
`;

exports[`toSatisfy() > error message 1`] = `
{
  "actual": "undefined",
  "diff": undefined,
  "expected": "undefined",
  "message": "expect(received).toSatisfy()

Expected value to satisfy:
[Function isOdd]

Received:
2",
}
`;

exports[`toSatisfy() > error message 2`] = `
{
  "actual": "undefined",
  "diff": undefined,
  "expected": "undefined",
  "message": "expect(received).toSatisfy()

Expected value to satisfy:
ODD

Received:
2",
}
`;

exports[`toSatisfy() > error message 3`] = `
{
  "actual": "Object {
  "value": 2,
}",
  "diff": "- Expected
+ Received

  Object {
-   "value": toSatisfy<(value) => value % 2 !== 0>,
+   "value": 2,
  }",
  "expected": "Object {
  "value": toSatisfy<(value) => value % 2 !== 0>,
}",
  "message": "expected { value: 2 } to deeply equal { value: toSatisfy{…} }",
}
`;

exports[`toSatisfy() > error message 4`] = `
{
  "actual": "Object {
  "value": 2,
}",
  "diff": "- Expected
+ Received

  Object {
-   "value": toSatisfy<(value) => value % 2 !== 0, ODD>,
+   "value": 2,
  }",
  "expected": "Object {
  "value": toSatisfy<(value) => value % 2 !== 0, ODD>,
}",
  "message": "expected { value: 2 } to deeply equal { value: toSatisfy{…} }",
}
`;
